--- a/app/ui/main_window.ui
+++ b/app/ui/main_window.ui
@@ -38,7 +38,7 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../resources/resources.qrc">
+         <iconset resource="../../../TradeHelper/app/resources/resources.qrc">
           <normaloff>:/svg/keyboard-arrow-left.svg</normaloff>:/svg/keyboard-arrow-left.svg</iconset>
         </property>
         <property name="iconSize">
@@ -83,7 +83,7 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../resources/resources.qrc">
+         <iconset resource="../../../TradeHelper/app/resources/resources.qrc">
           <normaloff>:/svg/keyboard-arrow-right.svg</normaloff>:/svg/keyboard-arrow-right.svg</iconset>
         </property>
         <property name="iconSize">
@@ -161,7 +161,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../resources/resources.qrc">
+             <iconset resource="../../../TradeHelper/app/resources/resources.qrc">
               <normaloff>:/svg/keyboard-arrow-left.svg</normaloff>:/svg/keyboard-arrow-left.svg</iconset>
             </property>
             <property name="iconSize">
@@ -206,7 +206,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../resources/resources.qrc">
+             <iconset resource="../../../TradeHelper/app/resources/resources.qrc">
               <normaloff>:/svg/keyboard-arrow-right.svg</normaloff>:/svg/keyboard-arrow-right.svg</iconset>
             </property>
             <property name="iconSize">
@@ -430,6 +430,15 @@
     </font>
    </property>
    <property name="windowTitle">
+    <string>Order</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>2</number>
+   </attribute>
+   <widget class="OrderView" name="wgt_order"/>
+  </widget>
+  <widget class="QDockWidget" name="dock_wgt_order">
+   <property name="windowTitle">
     <string>Favorites</string>
    </property>
    <attribute name="dockWidgetArea">
@@ -512,9 +521,15 @@
    <header>libs.widgets.sentimentals_widget.h</header>
    <container>1</container>
   </customwidget>
+  <customwidget>
+   <class>OrderView</class>
+   <extends>QWidget</extends>
+   <header>libs.order.h</header>
+   <container>1</container>
+  </customwidget>
  </customwidgets>
  <resources>
-  <include location="../resources/resources.qrc"/>
+  <include location="../../../TradeHelper/app/resources/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
