--- a/app/resources/style/style.qss
+++ b/app/resources/style/style.qss
@@ -254,6 +254,13 @@ QPushButton#close_position{
     color:white;
 }
 
+QPushButton{
+    background: palette(midlight);
+    height:20px;
+    border-radius:3px;
+    color:white;
+}
+
 /* QComboBox */
 QComboBox#cob_value_list,#cob_line_style{
     background: palette(midlight);
@@ -270,6 +277,10 @@ QDoubleSpinBox{
     height:20px;
 }
 
+QDoubleSpinBox:hover{
+    background: rgba(55, 55, 55, 100);
+}
+
 
 /* QSpinBox */
 QSpinBox{
@@ -283,3 +294,6 @@ SetSysColors{
     border: 1px solid black;
 }
 
+QMessageBox {
+    background-color: rgb(45 ,45, 45);
+}
