--- a/app/resources/resources.qrc
+++ b/app/resources/resources.qrc
@@ -29,8 +29,9 @@
     <file>svg/dot-line.svg</file>
     <file>svg/dash-line.svg</file>
     <file>style/style.qss</file>
-    <file>toolbar/toolbar.json</file>
+<!--    <file>toolbar/toolbar.json</file>-->
     <file>img/no_file.png</file>
     <file>img/splashscreen.jpg</file>
+    <file>font/Marianne/fontes_desktop/Marianne-Bold.otf</file>
   </qresource>
 </RCC>
