--- a/app/resources/style/style.qss
+++ b/app/resources/style/style.qss
@@ -275,11 +275,9 @@ QDoubleSpinBox{
     border-radius:3px;
     width: 40px;
     height:20px;
+    selection-background-color: transparent;
 }
 
-QDoubleSpinBox:hover{
-    background: rgba(55, 55, 55, 100);
-}
 
 
 /* QSpinBox */
@@ -288,6 +286,7 @@ QSpinBox{
     border-radius:3px;
     width: 40px;
     height:20px;
+    selection-background-color: transparent;
 }
 
 SetSysColors{
